Changing the model and reorganizing the project tree

--- a/App_Intro/App_Intro.csproj
+++ b/App_Intro/App_Intro.csproj
@@ -17,4 +17,11 @@
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ApplicationDefinition Include="views\App.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+      </ApplicationDefinition>
+    </ItemGroup>
+
 </Project>
