Added types images, changed pokemon model to display types images, redesigned main page list and removed show/hide button

--- a/App_Intro/App_Intro.csproj
+++ b/App_Intro/App_Intro.csproj
@@ -24,4 +24,8 @@
       </ApplicationDefinition>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="data\types_sprites\" />
+    </ItemGroup>
+
 </Project>
